<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="com.example.android.disdetector.MainActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:hint="@string/term_to_analyze" />

    <Button
        android:id="@+id/button4"
        android:layout_width="131dp"
        android:layout_height="33dp"
        android:text="@string/search_text"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/use_speech"
        android:background="@drawable/ic_mic_none_black_24dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:text="@string/speech_text"
        android:layout_gravity="center_horizontal"
        android:gravity="top"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/run_analyzer"  />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:text="@string/sentiment_analysis_results"
        android:layout_weight="0.13" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:gravity="top"
            android:inputType="textEmailAddress"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:gravity="right"
            android:hint="@string/password" />
    </LinearLayout>


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/run_analyzer_on_your_latest_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/email_analysis_results"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

</LinearLayout>
